kubernetes/overlays/testnet/flo-explorer-storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: flo-explorer
spec:
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 20Gi
